hw1 implemented